kubernetes/frontend-deploument.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: e-commerce-platform
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: akas11729/e-commerce-frontend:latest
        ports:
            - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
