kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: e-commerce-platform
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
