kubernetes/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: e-commerce-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7
        ports:
        - containerPort: 6379
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "300m"


---

apiVersion: v1
kind: Service 
metadata:
  name: redis-service
  namespace: e-commerce-platform
spec:
  selector: 
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
